# papers

./: AGENTS.md  README.md  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: add-paper.yml
.github/agents/: diagram-designer.agent.md  paper-curator.agent.md  paper-summarizer.agent.md  reference-auditor.agent.md  topic-explainer.agent.md  topic-matcher.agent.md  topic-researcher.agent.md
.github/workflows/: add-paper.yml  ci.yml  deploy-pages.yml
data/papers/: parcae-scaling-laws-for-stable-looped-language-models-2026.json
data/topics/: looped-transformers.explainer.html  looped-transformers.json  skill.md
data/topics/looped-transformers_files/: adaptive-test-time-compute.html  app.js  architecture-patterns.html  figures.js  fixed-point-dynamics.html  index.html  interactive3.js  interactives.js  mechanism.html  scaling.html  script.js  style.css
scripts/: add_paper.py  build_site.py
site/: index.html  papers.json  topics.json
site/assets/: app.js  style.css
site/papers/: index.html
site/papers/parcae-scaling-laws-for-stable-looped-language-models-2026/: index.html
site/topics/: index.html
site/topics/looped-transformers/: app.jsx  architecture.html  figures.js  index.html  interactive3.jsx  interactives.jsx  interactives2.js  interactives2.jsx  looped-depth.js  script.js  sections.js  sections.jsx  stable-looped-training.html  style.css  styles.css  (+2 more)
src/paper_trail/: __init__.py  ai.py  ingest.py  site.py
src/paper_trail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_ai.py  test_ingest.py  test_site.py
