[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-trail"
version = "0.1.0"
description = "Track papers from GitHub issues and publish them on GitHub Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=5.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

